--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-start;
+  gap: 3px;
 }
 
 .searchBar {
@@ -50,6 +51,27 @@
   font-weight: bold;
   border-style: none;
   cursor: pointer;
+}
+
+.navButtonContainer{
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.navButton {
+  color:rgb(255, 255, 0);
+  background-color: rgb(122, 146, 224);
+  padding: auto;
+  border-radius: 5px;
+  font-size: 1rem;
+  width: 11%;
+  height: 28.5px;
+  font-family: "Cambria", "Cochin", "Georgia", "Times", 'Times New Roman', "serif";
+  font-weight: bold;
+  border-style: none;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 .searchTip {
@@ -113,5 +135,47 @@
 @media (min-width: 750px) {
   .searchTip {
     font-size: 1.5vw;
+  }
+}
+
+@media (max-width: 1328px) {
+  .navButton {
+    width: 13%;
+  }
+}
+
+@media (min-width: 946px) and (max-width: 1098px) {
+  .navButton {
+    width: 15%;
+  }
+}
+
+@media (min-width: 831px) and (max-width: 945px) {
+  .navButton {
+    width: 17%;
+  }
+}
+
+@media (min-width: 705px) and (max-width: 830px) {
+  .navButton {
+    width: 20%;
+  }
+}
+
+@media (min-width: 547px) and (max-width: 704px) {
+  .navButton {
+    width: 26%;
+  }
+}
+
+@media (min-width: 445px) and (max-width: 546px) {
+  .navButton {
+    width: 32%;
+  }
+}
+
+@media (max-width: 444px) {
+  .navButton {
+    width: 48%;
   }
 }
